[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "carbon-lint"
version = "0.1.0"
description = "A linter that flags high-emission code patterns — like ESLint, but for CO2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Stijn Vos" }]
keywords = ["linter", "carbon", "sustainability", "green-software", "static-analysis", "emissions"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Gjeesus/carbon-lint"
Repository = "https://github.com/Gjeesus/carbon-lint"
Issues = "https://github.com/Gjeesus/carbon-lint/issues"

[project.scripts]
carbon-lint = "carbon_lint:main"

[tool.setuptools]
py-modules = ["carbon_lint"]
